// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with help text 1`] = `
.c9.c9.c9.c9.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(211,27%,76%,1);
}

.c10.c10.c10.c10.c10 {
  -webkit-animation: gYwSSW-450290765 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 150ms cubic-bezier(0.17,0,1,1);
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11.c11.c11.c11.c11 {
  margin-left: 4px;
}

.c13.c13.c13.c13.c13 {
  margin-bottom: 0px;
}

.c14.c14.c14.c14.c14 {
  margin-top: 4px;
}

.c15.c15.c15.c15.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c16.c16.c16.c16.c16 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c8.c8.c8.c8.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover + div {
  border-color: hsla(211,27%,76%,1);
  background-color: hsla(211,20%,52%,0.12);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="checkbox-group-49-label-54"
      class="c0"
      data-blade-component="checkbox-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="checkbox-group-49-label-54"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              >
                , Select one
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c0"
          data-blade-component="base-box"
        >
          <div
            class="c1"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c1"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Mango
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c13"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Orange
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
        <div
          class="c14"
          data-blade-component="base-box"
        >
          <span
            class="c15"
            data-blade-component="base-box"
            style="word-break: break-all;"
          >
            <span
              class="c16"
              data-blade-component="text"
            >
              Select one
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> should render with label 1`] = `
.c9.c9.c9.c9.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  border-width: 1.5px;
  border-style: solid;
  margin: 2px;
  border-radius: 2px;
  background-color: hsla(0,0%,100%,0);
  border-color: hsla(211,27%,76%,1);
}

.c10.c10.c10.c10.c10 {
  -webkit-animation: gYwSSW-450290765 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW-450290765 150ms cubic-bezier(0.17,0,1,1);
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  margin-bottom: 4px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11.c11.c11.c11.c11 {
  margin-left: 4px;
}

.c13.c13.c13.c13.c13 {
  margin-bottom: 0px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.c5.c5.c5.c5.c5 {
  color: hsla(212,39%,16%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c12.c12.c12.c12.c12 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c6.c6.c6.c6.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 2px;
  margin-bottom: 2px;
}

.c8.c8.c8.c8.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8:focus-visible + div {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c8.c8.c8.c8.c8:hover + div {
  border-color: hsla(211,27%,76%,1);
  background-color: hsla(211,20%,52%,0.12);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class=""
    data-blade-component="base-box"
  >
    <div
      aria-labelledby="checkbox-group-19-label-24"
      class="c0"
      data-blade-component="checkbox-group"
      role="group"
    >
      <span
        data-blade-component="form-label"
        id="checkbox-group-19-label-24"
        style="width: auto; flex-shrink: 0; margin-right: 16px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <p
              class="c3"
              data-blade-component="text"
            >
              Select fruits
            </p>
            <div
              class="c4"
              data-blade-component="visually-hidden"
            >
              <p
                class="c5"
                data-blade-component="text"
              >
                , 
              </p>
            </div>
          </div>
        </div>
      </span>
      <div
        class=""
        data-blade-component="base-box"
      >
        <div
          class="c0"
          data-blade-component="base-box"
        >
          <div
            class="c1"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="apple"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Apple
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c1"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="mango"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Mango
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            class="c13"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="checkbox"
            >
              <label
                class="c6"
                data-blade-component="checkbox-label"
              >
                <div
                  class="c0"
                  data-blade-component="base-box"
                >
                  <div
                    class="c7"
                    data-blade-component="base-box"
                  >
                    <input
                      aria-checked="false"
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="false"
                      class="c8"
                      role="checkbox"
                      type="checkbox"
                      value="orange"
                    />
                    <div
                      class="c9"
                      data-blade-component="checkbox-icon-wrapper"
                    >
                      <div
                        class=""
                        style="opacity: 0; position: absolute; display: flex;"
                      >
                        <svg
                          aria-hidden="true"
                          class="Svgweb__StyledSvg-vcmjs8-0"
                          data-blade-component="icon"
                          fill="none"
                          height="12px"
                          viewBox="0 0 8 8"
                          width="12px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M1.3335 3.99984C1.3335 3.81574 1.48273 3.6665 1.66683 3.6665H6.3335C6.51759 3.6665 6.66683 3.81574 6.66683 3.99984C6.66683 4.18393 6.51759 4.33317 6.3335 4.33317H1.66683C1.48273 4.33317 1.3335 4.18393 1.3335 3.99984Z"
                            data-blade-component="svg-path"
                            fill="hsla(0, 0%, 100%, 1)"
                            fill-rule="evenodd"
                            stroke="hsla(0, 0%, 100%, 1)"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="0.5"
                          />
                        </svg>
                      </div>
                      <div
                        class="c10"
                        style="opacity: 0; position: absolute; display: flex;"
                      />
                    </div>
                    <div
                      class="c11"
                      data-blade-component="base-box"
                    />
                    <p
                      class="c12"
                      data-blade-component="text"
                    >
                      Orange
                    </p>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
